--- a/pages/main-page.html
+++ b/pages/main-page.html
@@ -182,15 +182,15 @@
 <!-- Ejemplo de restaurante 1 -->
 <div class="restaurantCard" data-category="italian">
   <img class="restaurantImage" src="/pages/restaurants/tuccis.png" alt="Restaurant Image">
-  <div class="restaurantName">B</div>
+  <div class="restaurantName">Tucci's</div>
   <div class="restaurantHours">Closed</div>
 </div>
 
 <!-- Ejemplo de restaurante 2 (Cerrado) -->
 <div class="restaurantCard closed" data-category="american">
   <img class="restaurantImage" src="/pages/restaurants/windy-hill-grill.png" alt="Restaurant Image">
-  <div class="restaurantName">Isidro's Tamales Y Taqueria</div>
-  <div class="restaurantHours">Closed Now</div>
+  <div class="restaurantName">Windy Hill Grill</div>
+  <div class="restaurantHours">Closed</div>
 </div>
   
 
