--- a/pages/main-page.html
+++ b/pages/main-page.html
@@ -116,7 +116,8 @@
     </div>
   </div>
 
-  <div class="featuredContainer">
+  <div class="carousel-container">
+    <div class="featuredContainer" id="carousel">
     <div class="featuredRestaurants">
       <div class="restaurantCard closed" data-category="italian" onclick="showPopup()">
         <img class="restaurantImage" src="/pages/restaurants/tuccis.png" alt="Restaurant Image">
@@ -151,7 +152,7 @@
     <div class="featuredRestaurants">
       <div class="restaurantCard closed" data-category="breakfast" onclick="showPopup()">
         <img class="restaurantImage" src="/pages/restaurants/hokkaido-ramen.png" alt="Restaurant Image">
-        <div class="restaurantName">Hokkaido</div>
+        <div class="restaurantName">Hokkaido Ramen House in Bourbonnais</div>
         <div class="restaurantHours">Closed</div>
       </div>
     </div>
