finished all the responsive on the main page

--- a/pages/main-page.html
+++ b/pages/main-page.html
@@ -249,9 +249,9 @@
           <div class="restaurantHours">Closed</div>
         </div>
         
-        <div class="restaurantCard closed" data-category="breakfast" onclick="showPopup()">
+        <div class="restaurantCard closed" data-category="asian" onclick="showPopup()">
           <img class="restaurantImage" src="/pages/restaurants/hokkaido-ramen.png" alt="Restaurant Image">
-          <div class="restaurantName">Hokkaido</div>
+          <div class="restaurantName">Hokkaido Ramen House in Bourbonnais</div>
           <div class="restaurantHours">Closed</div>
         </div>
         
