fixed closed button

--- a/menu/uplifted-bistro-menu.html
+++ b/menu/uplifted-bistro-menu.html
@@ -131,10 +131,17 @@
                         <div class="toppings">Bacon</div>
                         <span class="topping-price-box">Add +0.00</span>
                     </div>
+
+
+
                     <div class="topping-rectangle" onclick="selectTopping('Sausage', this)">
                         <div class="toppings">Sausage</div>
                         <span class="topping-price-box">Add +0.00</span>
                     </div>
+                    <div class="topping-rectangle" onclick="selectTopping('Sausage', this)">
+                      <div class="toppings">Sausage</div>
+                      <span class="topping-price-box">Add +0.00</span>
+                  </div>
 
                     <div class="topping-rectangle" onclick="selectTopping('Sausage', this)">
                       <div class="toppings">Sausage</div>
@@ -143,12 +150,6 @@
                     <!-- Add more topping rectangles as needed -->
                   </div>
               </div>
-
-
-
-
-
-
 
               <div class="meat-selection">
                 <div class="meat-rectangle">
@@ -161,22 +162,28 @@
                       <div class="toppings">Bacon</div>
                       <span class="topping-price-box">Add +0.00</span>
                   </div>
-                  <div class="topping-rectangle" onclick="selectTopping('Bacon', this)">
-                    <div class="toppings">Bacon</div>
-                    <span class="topping-price-box">Add +0.00</span>
-                </div>
+
+
+                  
                   <div class="topping-rectangle" onclick="selectTopping('Sausage', this)">
                       <div class="toppings">Sausage</div>
                       <span class="topping-price-box">Add +0.00</span>
                   </div>
-
                   <div class="topping-rectangle" onclick="selectTopping('Sausage', this)">
                     <div class="toppings">Sausage</div>
                     <span class="topping-price-box">Add +0.00</span>
                 </div>
+
                   <!-- Add more topping rectangles as needed -->
                 </div>
             </div>
+
+
+
+
+
+
+
 
 
           </div>
