added search bar

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 <div class="mobile-menu">
   <a href="#">Home</a>
-  <a href="#">Catering</a>
-  <a href="#">Donations</a>
+<!-- <a href="#">Catering</a> -->
+<!--   <a href="#">Donations</a>-->
   <a href="#">About Us</a>
   <a href="#">Login</a>
 </div>
