--- a/menu/uplifted-bistro-menu.html
+++ b/menu/uplifted-bistro-menu.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="/menu/uplifted-bistro-menu.css">
-  <script src="/pages/main-page.js" defer></script> 
+  <script src="/" defer></script> 
 
 
   
@@ -30,8 +30,8 @@
   </div>
   <div class="menu">
     <a href="/index.html">Home</a>
-    <a href="#">Catering</a>
-    <a href="#">Donations</a>
+<!-- <a href="#">Catering</a> -->
+<!--   <a href="#">Donations</a>-->
     <a href="#">About Us</a>
     <a href="#">My Account</a>
   </div>
@@ -50,19 +50,40 @@
 
 <div class="mobile-menu">
   <a href="/index.html">Home</a>
-  <a href="#">Catering</a>
-  <a href="#">Donations</a>
+<!-- <a href="#">Catering</a> -->
+<!--   <a href="#">Donations</a>-->
   <a href="#">About Us</a>
   <a href="#">My Account</a>
 </div>
 </head>
 
-
-    <div class="hoursContainer">
-        <div class="workingHours">
-            Today working hours: 10:30 am to 8:30pm
-        </div>
+  <!-- Location Bar -->
+  <div class="locationBar" id="locationBar">
+    <div class="boldText">Delivering to:</div>
+    <div class="locationText">
+      <span>Kankakee, IL, USA</span>
+      <span class="locationIcon"><i class="fas fa-map-marker-alt"></i></span>
     </div>
+  </div>
+
+
+  
+
+<div class="hoursContainer">
+  <div class="workingHours">
+      Today working hours: 10:30 am to 8:30pm
+  </div>
+</div>
+
+
+<!-- Search Bar -->
+<div class="welcome-section">
+  <div class="search-container">
+      <input type="text" id="search" placeholder="Search a meal...">
+      <button class="search-button">Search</button>
+  </div>
+</div>
+
 
             <!-- Food Category Filter -->
 <div class="filterContainer">
@@ -89,7 +110,7 @@
   </div>
 
   <div class="restaurantGrid" id="restaurantGrid">
-      <!-- Open Restaurant Example-->
+      <!-- Food Examples-->
       <a href="#" style="text-decoration: none;">
           <div class="restaurantCard popup-trigger" data-category="morningstars">
               <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
@@ -98,6 +119,83 @@
               <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
           </div>
       </a>
+
+
+      <a href="#" style="text-decoration: none;">
+        <div class="restaurantCard popup-trigger" data-category="morningstars">
+            <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+            <div class="restaurantName">$8.59</div>
+            <div class="foodItemName">Meat Starter</div>
+            <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+        </div>
+    </a>
+
+
+    <a href="#" style="text-decoration: none;">
+      <div class="restaurantCard popup-trigger" data-category="morningstars">
+          <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+          <div class="restaurantName">$8.59</div>
+          <div class="foodItemName">Meat Starter</div>
+          <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+      </div>
+  </a>
+
+  <a href="#" style="text-decoration: none;">
+    <div class="restaurantCard popup-trigger" data-category="morningstars">
+        <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+        <div class="restaurantName">$8.59</div>
+        <div class="foodItemName">Meat Starter</div>
+        <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+    </div>
+</a>
+
+<a href="#" style="text-decoration: none;">
+  <div class="restaurantCard popup-trigger" data-category="morningstars">
+      <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+      <div class="restaurantName">$8.59</div>
+      <div class="foodItemName">Meat Starter</div>
+      <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+  </div>
+</a>
+
+<a href="#" style="text-decoration: none;">
+  <div class="restaurantCard popup-trigger" data-category="morningstars">
+      <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+      <div class="restaurantName">$8.59</div>
+      <div class="foodItemName">Meat Starter</div>
+      <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+  </div>
+</a>
+
+<a href="#" style="text-decoration: none;">
+  <div class="restaurantCard popup-trigger" data-category="morningstars">
+      <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+      <div class="restaurantName">$8.59</div>
+      <div class="foodItemName">Meat Starter</div>
+      <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+  </div>
+</a>
+
+
+
+  <a href="#" style="text-decoration: none;">
+    <div class="restaurantCard popup-trigger" data-category="morningstars">
+        <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+        <div class="restaurantName">$8.59</div>
+        <div class="foodItemName">Meat Starter</div>
+        <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+    </div>
+</a>
+
+
+<a href="#" style="text-decoration: none;">
+  <div class="restaurantCard popup-trigger" data-category="morningstars">
+      <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+      <div class="restaurantName">$8.59</div>
+      <div class="foodItemName">Meat Starter</div>
+      <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+  </div>
+</a>
 
 
 
@@ -110,6 +208,66 @@
             <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
         </div>
     </a>
+
+
+
+
+    <a href="#" style="text-decoration: none;">
+      <div class="restaurantCard popup-trigger" data-category="morningstars">
+          <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+          <div class="restaurantName">$8.59</div>
+          <div class="foodItemName">Meat Starter</div>
+          <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+      </div>
+  </a>
+
+
+
+  <a href="#" style="text-decoration: none;">
+    <div class="restaurantCard popup-trigger" data-category="morningstars">
+        <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+        <div class="restaurantName">$8.59</div>
+        <div class="foodItemName">Meat Starter</div>
+        <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+    </div>
+</a>
+
+
+
+
+<a href="#" style="text-decoration: none;">
+  <div class="restaurantCard popup-trigger" data-category="morningstars">
+      <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+      <div class="restaurantName">$8.59</div>
+      <div class="foodItemName">Meat Starter</div>
+      <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+  </div>
+</a>
+
+
+
+<a href="#" style="text-decoration: none;">
+  <div class="restaurantCard popup-trigger" data-category="morningstars">
+      <img class="restaurantImage" src="/menu/uplifted-bistro-pics/meat-starter.jpg" alt="Restaurant Image">
+      <div class="restaurantName">$8.59</div>
+      <div class="foodItemName">Meat Starter</div>
+      <div class="foodDescription">Egg and American cheese. Served on choice of toasted bagel, croissant, or wrap.</div>
+  </div>
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -316,7 +474,64 @@ function calculateTotalPrice() {
   </div>
 </section>
 
+<script>
+  
+  
+  // NAV BAR FUNCTION START (...)
+  
+  function toggleMobileMenu() {
+    var mobileMenu = document.querySelector('.mobile-menu');
+    var mobileMenuContainer = document.querySelector('.mobile-menu-container');
+    mobileMenu.classList.toggle('show');
+    mobileMenuContainer.style.display = mobileMenu.classList.contains('show') ? 'block' : 'none';
+  }
 
+  function closeMobileMenu() {
+    var mobileMenu = document.querySelector('.mobile-menu');
+    var mobileMenuContainer = document.querySelector('.mobile-menu-container');
+    mobileMenu.classList.remove('show');
+    mobileMenuContainer.style.display = 'none';
+  }
+
+  // NAV BAR FUNCTION START (...)
+
+
+
+
+
+
+      // Location Bar Size
+      var locationBar = document.getElementById('locationBar');
+  var prevScrollPos = window.pageYOffset;
+
+  window.addEventListener('scroll', function() {
+    var currentScrollPos = window.pageYOffset;
+
+    // Scroll-up effect
+    if (prevScrollPos > currentScrollPos || currentScrollPos < 50) {
+      locationBar.classList.remove('scroll-up');
+    } else {
+      locationBar.classList.add('scroll-up');
+    }
+
+    prevScrollPos = currentScrollPos;
+  });    // Location Bar Size
+  var locationBar = document.getElementById('locationBar');
+  var prevScrollPos = window.pageYOffset;
+
+  window.addEventListener('scroll', function() {
+    var currentScrollPos = window.pageYOffset;
+
+    // Scroll-up effect
+    if (prevScrollPos > currentScrollPos || currentScrollPos < 50) {
+      locationBar.classList.remove('scroll-up');
+    } else {
+      locationBar.classList.add('scroll-up');
+    }
+
+    prevScrollPos = currentScrollPos;
+  });
+</script>
     
 </body>
 </html>                                                                         
