--- a/pages/main-page.html
+++ b/pages/main-page.html
@@ -20,8 +20,8 @@
   </div>
   <div class="menu">
     <a href="/index.html">Home</a>
-    <a href="#">Catering</a>
-    <a href="#">Donations</a>
+<!-- <a href="#">Catering</a> -->
+<!--   <a href="#">Donations</a>-->
     <a href="#">About Us</a>
     <a href="#">My Account</a>
   </div>
@@ -39,13 +39,12 @@
 <div class="mobile-menu-container" onclick="closeMobileMenu()"></div>
 
 <div class="mobile-menu">
-  <a href="/index.html">Home</a>
-  <a href="#">Catering</a>
-  <a href="#">Donations</a>
+  <a href="#">Home</a>
+<!-- <a href="#">Catering</a> -->
+<!--   <a href="#">Donations</a>-->
   <a href="#">About Us</a>
-  <a href="#">My Account</a>
+  <a href="#">Login</a>
 </div>
-</head>
 
 
 
