Test 1 main updates

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <img src="/assets/delivery-service-in-kankakee-logo.png" alt="Tu Logo">
   </div>
   <div class="menu">
-    <a href="#">Home</a>
-    <a href="#">Catering</a>
-    <a href="#">Donations</a>
+    <a href="/index.html">Home</a>
+<!-- <a href="#">Catering</a> -->
+<!--   <a href="#">Donations</a>-->
     <a href="#">About Us</a>
+    <a href="#">My Account</a>
   </div>
   <div class="cart-order-toggle">
     <div class="cart">
@@ -38,11 +39,11 @@
 <div class="mobile-menu-container" onclick="closeMobileMenu()"></div>
 
 <div class="mobile-menu">
-  <a href="#">Home</a>
-<!-- <a href="#">Catering</a> -->
-<!--   <a href="#">Donations</a>-->
-  <a href="#">About Us</a>
-  <a href="#">Login</a>
+  <a href="/index.html">Home</a>
+  <!-- <a href="#">Catering</a> -->
+  <!--   <a href="#">Donations</a>-->
+      <a href="#">About Us</a>
+      <a href="#">My Account</a>
 </div>
 
 
