--- a/menu/uplifted-bistro-menu.html
+++ b/menu/uplifted-bistro-menu.html
@@ -325,13 +325,13 @@
 
               <div class="meat-selection">
                 <div class="meat-rectangle">
-                    <span class="meat-text-orange">Choose your meat</span>
+                    <span class="meat-text-orange">Choose your Side</span>
                     <span class="meat-text-blue">1 required</span>
                 </div>
 
                 <div class="topping-options" id="toppingOptions">
                   <div class="topping-rectangle" onclick="selectTopping('Bacon', this)">
-                      <div class="toppings">Bacon</div>
+                      <div class="toppings">Onion Rings, Cheese sticks, French Fries and a can of soda (sprite)</div>
                       <span class="topping-price-box">Add +0.00</span>
                   </div>
 
